# ai-travel-agent

./: pyproject.toml
app/: main.py
app/agent/: bootstrap.py  flight_agent.py
app/core/: config.py
app/router/: flight_router.py
app/schema/: chat_schema.py  flight_schema.py
app/tools/: apify_flights.py
