[project]
name = "apifyagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "apify-client>=3.0.4",
    "fastapi>=0.139.0",
    "openai>=2.44.0",
    "openai-agents>=0.17.7",
    "pydantic-settings>=2.14.2",
    "uvicorn>=0.49.0",
]
